--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,5 +1,12 @@
-- name: Godot Android export
-  uses: dulvui/godot-android-export@v4.0.0
+            - name: godot-android-builder
+  # You may pin to the exact commit or the version.
+  # uses: croconut/godot-multi-builder@76d958c04895a6a1b66c6b235b10eecf064ad897
+  uses: croconut/godot-multi-builder@v1
   with:
-    working-directory: $HOME
-    godot-version: 4.2
+    # Comma separated build names, as defined in your export_presets.cfg file.
+    names: Android
+    # Where your godot.project file is located, relative to your repo's top level.
+    path-to-game: # optional, default is ./
+    # Whether to export in debug-mode
+    debug-mode: # optional, default is true
+          
