--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,16 +1,10 @@
-'on': push
+name: Godot Android export
+on: push
 jobs:
   pass-secret-to-action:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
+      - uses: dulvui/godot-android-export@v4.0.0
         with:
-          java-version: '17'
-          distribution: 'temurin'
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v3
-     
-      - name: Build SampleApplication
-        run: ./gradlew --no-daemon build
+          working-directory: ./
+          godot-version: 4.2
