--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -8,3 +8,9 @@ jobs:
         with:
           working-directory: ./
           godot-version: 4.2
+      - name: Bundle aab to apk
+        run: |
+          wget -q https://github.com/google/bundletool/releases/download/1.14.0/bundletool-all-1.14.0.jar
+          java -jar bundletool-all-1.14.0.jar build-apks --bundle=FutsalManager.aab --output=FutsalManager.apks \
+          --ks=release.keystore --mode=universal
+          unzip -p FutsalManager.apks universal.apk > FutsalManager.apk
