--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -12,5 +12,5 @@ jobs:
         run: |
           wget -q https://github.com/google/bundletool/releases/download/1.14.0/bundletool-all-1.14.0.jar
           java -jar bundletool-all-1.14.0.jar build-apks --bundle=FutsalManager.aab --output=FutsalManager.apks \
-          --ks=release.keystore --mode=universal
+          --mode=universal
           unzip -p FutsalManager.apks universal.apk > FutsalManager.apk
