--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,5 +1,14 @@
 name: Godot Android export
 on: push
+env:
+  GODOT_VERSION: 4.2.1
+  ANDROID_SERVICE_ACCOUNT_JSON: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}
+  ANDROID_KEYSTORE_BASE64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+  ANDROID_KEYSTORE_ALIAS: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
+  ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
+  ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+  ANDROID_KEYSTORE_DEBUG_BASE64: ${{ secrets.ANDROID_KEYSTORE_DEBUG_BASE64 }}
+  SERVICE_ACCOUNT_JSON: ${{ secrets.ANDROID_SERVICE_ACCOUNT_JSON }}
 jobs:
   pass-secret-to-action:
     runs-on: ubuntu-latest
@@ -12,5 +21,16 @@ jobs:
         run: |
           wget -q https://github.com/google/bundletool/releases/download/1.14.0/bundletool-all-1.14.0.jar
           java -jar bundletool-all-1.14.0.jar build-apks --bundle=FutsalManager.aab --output=FutsalManager.apks \
-          --mode=universal
+          --ks=release.keystore --ks-pass=pass:"$ANDROID_STORE_PASSWORD" --ks-key-alias="$ANDROID_KEYSTORE_ALIAS" \
+          --key-pass=pass:"$ANDROID_KEYSTORE_PASSWORD" --mode=universal
           unzip -p FutsalManager.apks universal.apk > FutsalManager.apk
+
+      - name: Upload binaries to Github release
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: ./FutsalManager.apk
+          asset_name: FutsalManager.apk
+          tag: ${{ env.VERSION_NAME }}-${{ env.VERSION_CODE }}
+          overwrite: true
+          body: "FutsalManager - version: ${{ env.VERSION_NAME }} code: ${{ env.VERSION_CODE }}"
